--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,23 @@
 body {
     font-family : Arial, Verdana;
-}
-body {
     background-color : #000000;
-}
-body {
     color: #ffffff;
-}
-body {
     margin-top: 20px;
-}
-body { 
     margin-left: 20px;
-}
-body { 
     margin-right: 20px;
 }
 h1 {
     text-align: center;
-}
-h1 {
     font-size: 42px;
     padding: 15px;
 }
 h2 {
     color: #0D0D0D;
-}
-h2 {
     font-size: 30px;
 }
 p {
-   font-size: 24px;
-}
-p {
+    font-size: 24px;
     padding-top: 10px;
-}
-p {
     padding-left: 10px;
 }
 img { 
@@ -51,7 +33,7 @@ div {
    padding: 20px;
    border-style: solid;
    border-width: 3px;
-   border-color: white;
+   border-color: #FFFFFF;
 }
 .introduction {
     border-radius: 15px;
@@ -62,8 +44,10 @@ div {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-top: 2px;
-    border-right: 5px;
+    border-bottom: 2px;
+    border-left: 5px;
+    border-right: 0px;
+    border-top: 0px;
 }
 .blue {
     background-color: #0000FF;
@@ -73,7 +57,7 @@ div {
     border-bottom: 2px;
     color: #C4C4C4;
 }
-h2.blue {
+.blue h2{
     color: #C4C4C4;
 }
 .yellow {
@@ -85,7 +69,7 @@ h2.blue {
     color: #707070;
 }
 .green {
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-left: 5px;
