--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ img {
     border-width: 10px;
 }
 div {
-   height: 125px;
+   min-height: 125px;
    padding: 20px;
    border-style: solid;
    border-width: 3px;
@@ -44,8 +44,8 @@ div {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-bottom: 2px solid;
+    border-left: 5px solid;
     border-right: 0px;
     border-top: 0px;
 }
@@ -53,27 +53,36 @@ div {
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-left: 5px;
-    border-bottom: 2px;
-    color: #C4C4C4;
+    border-color: #FFFFFF;
+    border-right: 5px solid;
+    border-top: 2px solid;
+    border-left: 0px;
+    border-bottom: 0px;
 }
-.blue h2{
+.blue h2, .blue p{
     color: #C4C4C4;
 }
 .yellow {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-right: 5px;
+    border-bottom: 2px solid;
+    border-left: 5px solid;
+    border-right: 0px;
+    border-top: 0px;
+    
+}
+.yellow p{ 
     color: #707070;
 }
 .green {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-left: 5px;
-    border-bottom: 2px;
+    border-right: 5px solid;
+    border-top: 2px solid;
+    border-left: 0px;
+    border-bottom: 0px;
 }
 footer {
     background: rgb(0,0,0);
@@ -86,4 +95,5 @@ footer {
     padding-top: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
+    padding-left: 0px;
 }
