--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,8 @@ footer {
     border-style: solid;
     border-width: 5px;
     border-color: white;
+}
+footer p {
     font-size: 20px;
     text-align: right; 
     padding-top: 15px;
